[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letmego"
authors = [
  { name="mikigo", email="huangmingqiang@uniontech.com" },
]
version = "1.0.0"
description = "letmego"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest",
]

doc = ["mkdocs-material"]


[tool.hatch.build.targets.sdist]
include = [
    "/letmego",
]

[project.urls]
Source = "https://github.com/linuxdeepin/linuxdeepin"
Documentation = "https://linuxdeepin.github.io/letmego"
